--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
-project(BorlandMath CXX)
+project(ObscureMath CXX)
 
 include_directories("lib")
-add_library(bmath "lib/U33.cpp")
+add_library(omath "lib/U33.cpp")
 
-add_executable(test_bmath "test.cpp")
-target_link_libraries(test_bmath bmath)
+add_executable(test_omath "test.cpp")
+target_link_libraries(test_omath omath)
 
-add_executable(profile_bmath "profile.cpp")
-target_link_libraries(profile_bmath bmath)
+add_executable(profile_omath "profile.cpp")
+target_link_libraries(profile_omath omath)
